feat: add Input component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
       "@routes/*": ["src/routes/*"],
       "@utils/*": ["src/utils/*"],
       "@types/*": ["src/types/*"]
-    }
+    },
+    "jsxImportSource": "@emotion/react"
   },
   "include": [
     "src",
