chore: install dependency svgr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "types": ["vite-plugin-svgr/client"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -41,6 +41,7 @@
   "include": [
     "src",
     "vite.config.ts",
-    ".storybook"
+    ".storybook",
+    "svg.d.ts"
   ]
 }
