--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/test": "^8.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -60,6 +61,8 @@
     "lint-staged": "^15.2.10",
     "msw": "^2.4.6",
     "prettier": "3.3.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "storybook": "^8.3.0",
     "typescript": "5.5",
     "typescript-eslint": "^8.0.1",
