--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@loadable/component": "^5.16.4",
     "@tanstack/react-query": "^5.56.2",
     "csstype": "^3.1.3",
     "react": "^18.3.1",
@@ -46,6 +47,7 @@
     "@storybook/react": "^8.3.0",
     "@storybook/react-vite": "^8.3.0",
     "@storybook/test": "^8.3.0",
+    "@types/loadable__component": "^5.13.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
