--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@emotion/styled": "^11.13.0",
     "@loadable/component": "^5.16.4",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "csstype": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "zustand": "^4.5.5"
@@ -75,6 +77,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
