--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "msw": "^2.4.6",
+    "msw-storybook-addon": "^2.0.3",
     "prettier": "3.3.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
