--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@emotion/styled": "^11.13.0",
     "@loadable/component": "^5.16.4",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "csstype": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "zustand": "^4.5.5"
@@ -63,6 +65,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "msw": "^2.4.6",
+    "msw-storybook-addon": "^2.0.3",
     "prettier": "3.3.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
@@ -75,6 +78,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
