--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-VITE_BASE_URL=http://localhost:8080
+VITE_BASE_URL=http://localhost:5173
+VITE_GOOGLE_AUTH_CLIENT_ID=268837811477-28b8i24r1sb0aroltho84ia6jecj74h7.apps.googleusercontent.com
+VITE_GOOGLE_AUTH_REDIRECT_URI=http://localhost:5173/loading
