--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@loadable/component": "^5.16.4",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "csstype": "^3.1.3",
